# QmlTreeview

./: .gitignore  CMakeLists.txt  Debug.rtf  README.md  main.cpp  main.qml  mainOwnDelegate.qml  treeitem.cpp  treeitem.h  treemodel.cpp  treemodel.h
